commit made by prince

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'am Prince kumar.</h2>
-                        <p class="about__text">I am Computer Science Student.I am Full Stack Devloper with minor knowledge in Machine learning and devops tools.
-                            I had completed Full Stack Devlopment Framework like MangoDB,ExpressJS,ReactJS,NodeJS.
-                            I had also completed my Devops Tools like Git,Github,Docker,Dockerhub,Kubernetes and Jenkins.
-                            I have a lots intrest in Machine Learning and Devops tools related projects.
-
+                        <p class="about__text"> &#8594; I am a self-taught front-end developer based in Bihar, India. I can develop responsive websites from scratch and raise them into modern user-friendly web experiences. <br>
+                            &#8594; Transforming my creativity and knowledge into a website has been my passion for over a year. I have developed various projects. I always strive to learn about the newest technologies and frameworks. <br>
+                            &#8594; I've hands-on experience in software development, mainly in MongoDB, ExpressJS, ReactJS, NodeJS stack(MERN stack), Bootstrap,and restAPI. <br>
+                            &#8594; I've intrest in Machine Learning Algorithm and Devops Tools,so i am very familer with Git&Github,Docker&Dockerhub,Kubernetes,Jenkins and for Machine Learning
+                            i have knowledge in sklearn,pandas,numpy,Tensorflow <br>.
                         </p>           
                     </div>                                   
                 </div>
@@ -334,11 +334,11 @@
 
             <!--===== WORK =====-->
             <section class="work section" id="work">
-                <h2 class="section-title">Work</h2>
+                <h2 class="section-title">Projects</h2>
 
                 <div class="work__container bd-grid">
                     <a href="https://princekumarg-multiple-disease-prediction-app1-4366nx.streamlit.app/" class="work__img">
-                        <img src="assets/img/work1.jpg" alt="">
+                        <img src="./assets/img/machine-learning.png" alt="">
                     </a>
                     <a href="" class="work__img">
                         <img src="assets/img/work2.jpg" alt="">
