--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                                 <i class='bx bx-spreadsheet skills__icon'></i>
                                 <span class="skills__name">Python</span>
                             </div>
-                            <div class="skills__bar skills__python">
+                            <div class="skills__bar skills__pythons">
 
                             </div>
                             <div>
