--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="assets/css/styles.css">
-        <link rel="icon" href="./assets/img/Mylog.png" type="image/icon type">
+        <link rel="icon" href="./assets/img/Mylogo.png" type="image/icon type">
 
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
@@ -27,6 +27,7 @@
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#work" class="nav__link">Projects</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                        <li class="nav__item"><a href="#Certificate" class="nav__link">Certificate</a></li>
                     </ul>
                 </div>
 
@@ -359,11 +360,54 @@
                     </a>
                 </div>
             </section>
+            <!--=====CERTIFICATES======-->
+            <section class="section" id="Certificate">
+                <h2 class="section-title">CERTIFICATES</h2>
+                <div class="certificate">
+                    <div>
+                        <h3><i class='bx bx-star'></i>Become a Full-Stack Web Developer(linked)</h3>
+                        <p><li>HTML Essential Training</li></p>
+                        <p><li>CSS Essential Training</li></p>
+                        <p><li>JavaScript Essential Training</li></p>
+                        <p><li>Learning ECMAScript 6+ (ES6+)</li></p>
+                        <p><li>React.js Essential Training</li></p>
+                        <p><li>SQL Essential Training</li></p>
+                        <p><li>Learning REST APIs</li></p>
+                        <p><li>NoSQL Essential Training</li></p>
+                        <p><li>Search Techniques for WebDevelopers</li></p>
+                        <p><li>Node.js Essential Training</li></p>
+                        <p><li>Git Essential Training</li></p>
+                        <p><li>DevOps Foundations</li></p>
+                    </div>
+                    <div>
+                        <h3><i class='bx bx-star'></i>Become a Data Scientist(linked)</h3>
+                        <p><li>A Day In The Life of a Data Scientist</li></p>
+                        <p><li>Big Data in the Age of AI</li></p>
+                        <p><li>Data Science and Analytics Career
+                            Paths and Certifications: First Steps</li></p>
+                        <p><li>Data Science Foundations:
+                            Fundamentals (2019)</li></p>
+                        <p><li>Data Visualization: Storytelling
+                        </li></p>
+                        <p><li>Learning Data Governance
+                        </li></p>
+                        <p><li>Lessons from Data Scientists</li></p>
+                        <p><li>Side Hustle Strategies for Data
+                            Science and Analytics Experts</li></p>
+                        <p><li>Statistics Foundations 1: The Basics</li></p>
+                        <p><li>Statistics Foundations 2: Probability</li></p>
+                        <p><li>The Non-Technical Skills of Effective
+                            Data Scientists
+                            </li></p>
+                        <p><li>Data Fluency: Exploring and
+                            Describing Data</li></p>
+                    </div>
+                </div>
 
+            </section>
             <!--===== CONTACT =====-->
             <section class="contact section" id="contact">
                 <h2 class="section-title">Contact</h2>
-
                 <div class="contact__container bd-grid">
                     <form action="" class="contact__form">
                         <input type="text" placeholder="Name" class="contact__input">
