commit made by prince

--- a/index.html
+++ b/index.html
@@ -340,24 +340,36 @@
                 <h2 class="section-title">Projects</h2>
 
                 <div class="work__container bd-grid">
-                    <a href="https://princekumarg-multiple-disease-prediction-app1-4366nx.streamlit.app/" class="work__img">
+                    <div class="work__img">
                         <img src="./assets/img/machine-learning.png" alt="">
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work2.jpg" alt="">
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work3.jpg" alt="">
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work4.jpg" alt="">
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work5.jpg" alt="">
-                    </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work6.jpg" alt="">
-                    </a>
+                        <a href="https://github.com/princekumarg/multiple_disease_prediction"><button class="but">Code Deploy</button></a>
+                        <a href="https://princekumarg-multiple-disease-prediction-app1-4366nx.streamlit.app/"><button class="but">Live Demo</button></a>
+                    </div>
+                    <div class="work__img">
+                        <img src="./assets/img/Maachine-Learning.webp" alt="">
+                        <a href="https://github.com/princekumarg/multiple_disease_prediction"><button class="but">Code Deploy</button></a>
+                        <a href="https://princekumarg-multiple-disease-prediction-app1-4366nx.streamlit.app/"><button class="but">Live Demo</button></a>
+                    </div>
+                    <div class="work__img">
+                        <img src="./assets/img/NLP-e1595362635214.jpg" alt="">
+                        <a href="https://github.com/princekumarg/multiple_disease_prediction"><button class="but">Code Deploy</button></a>
+                        <a href="https://princekumarg-multiple-disease-prediction-app1-4366nx.streamlit.app/"><button class="but">Live Demo</button></a>
+                    </div>
+                    <div class="work__img">
+                        <img src="./assets/img/istockphoto-1131109259-1024x1024.jpg" alt="">
+                        <a href="https://github.com/princekumarg/multiple_disease_prediction"><button class="but">Code Deploy</button></a>
+                        <a href="https://princekumarg-multiple-disease-prediction-app1-4366nx.streamlit.app/"><button class="but">Live Demo</button></a>
+                    </div>
+                    <div class="work__img">
+                        <img src="./assets/img/images.jfif" alt="">
+                        <a href="https://github.com/princekumarg/multiple_disease_prediction"><button class="but">Code Deploy</button></a>
+                        <a href="https://princekumarg-multiple-disease-prediction-app1-4366nx.streamlit.app/"><button class="but">Live Demo</button></a>
+                    </div>
+                    <div class="work__img">
+                        <img src="./assets/img/machine-learning.png" alt="">
+                        <a href="https://github.com/princekumarg/multiple_disease_prediction"><button class="but">Code Deploy</button></a>
+                        <a href="https://princekumarg-multiple-disease-prediction-app1-4366nx.streamlit.app/"><button class="but">Live Demo</button></a>
+                    </div>
                 </div>
             </section>
             <!--=====CERTIFICATES======-->
