commit made by prince kumar agrawal

--- a/index.html
+++ b/index.html
@@ -109,8 +109,10 @@
                 <div class="skills__container bd-grid">          
                     <div>
                         <h2 class="skills__subtitle">Profesional Skills</h2>
-                        <p class="skills__text">I am a FullStack Devlopers and minor intrest Machine Learning,Devops,So i am
-                            very familer with its Tools,language,and Frame work.
+                        <p class="skills__text">i am passionate software engineer with expertise in Machine Learning, Devops Tools.
+                            i love to explore various technologies and frameworks to and trained and scalable solutions,with a strong 
+                            foundation in Web Devlopment i strive to create robust and optimize solution.i am constantly expanding my skills 
+                            and staying up-to-date with the latest advancments in the of software devlopment.
                         </p>
                         <div class="skills__data">
                             <div class="skills__names">
@@ -346,7 +348,7 @@
                         <a href="https://princekumarg-multiple-disease-prediction-app1-4366nx.streamlit.app/"><button class="but">Live Demo</button></a>
                     </div>
                     <div class="work__img">
-                        <img src="./assets/img/Maachine-Learning.webp" alt="">
+                        <img src="./assets/img/Deep-Learning.jpg" alt="">
                         <a href="https://github.com/princekumarg/multiple_disease_prediction"><button class="but">Code Deploy</button></a>
                         <a href="https://princekumarg-multiple-disease-prediction-app1-4366nx.streamlit.app/"><button class="but">Live Demo</button></a>
                     </div>
@@ -356,7 +358,7 @@
                         <a href="https://princekumarg-multiple-disease-prediction-app1-4366nx.streamlit.app/"><button class="but">Live Demo</button></a>
                     </div>
                     <div class="work__img">
-                        <img src="./assets/img/istockphoto-1131109259-1024x1024.jpg" alt="">
+                        <img src="./assets/img/Java.jpg" alt="">
                         <a href="https://github.com/princekumarg/multiple_disease_prediction"><button class="but">Code Deploy</button></a>
                         <a href="https://princekumarg-multiple-disease-prediction-app1-4366nx.streamlit.app/"><button class="but">Live Demo</button></a>
                     </div>
