Commit made by Prince

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#work" class="nav__link">Projects</a></li>
-                        <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                         <li class="nav__item"><a href="#Certificate" class="nav__link">Certificate</a></li>
+                        <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                     </ul>
                 </div>
 
@@ -379,7 +379,7 @@
                 <h2 class="section-title">CERTIFICATES</h2>
                 <div class="certificate">
                     <div>
-                        <h3><i class='bx bx-star'></i>Become a Full-Stack Web Developer(linked)</h3>
+                        <h3><i class='bx bx-star'></i>Become a Full-Stack Web Developer(linkedIn)</h3>
                         <p><li>HTML Essential Training</li></p>
                         <p><li>CSS Essential Training</li></p>
                         <p><li>JavaScript Essential Training</li></p>
@@ -394,7 +394,7 @@
                         <p><li>DevOps Foundations</li></p>
                     </div>
                     <div>
-                        <h3><i class='bx bx-star'></i>Become a Data Scientist(linked)</h3>
+                        <h3><i class='bx bx-star'></i>Become a Data Scientist(linkedIn)</h3>
                         <p><li>A Day In The Life of a Data Scientist</li></p>
                         <p><li>Big Data in the Age of AI</li></p>
                         <p><li>Data Science and Analytics Career
