--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Prince Kumar</span><br>Full stack,Machine learning and Devops Developer</h1>
-
+                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Prince Kumar</span><br><span id="dynamic-text" class="dynamic-text-color"></span></h1>
                     <a href="#" class="button">Contact</a>
                 </div>
 
@@ -363,7 +362,7 @@
                         <a href="https://princekumarg-multiple-disease-prediction-app1-4366nx.streamlit.app/"><button class="but">Live Demo</button></a>
                     </div>
                     <div class="work__img">
-                        <img src="./assets/img/images.jfif" alt="">
+                        <img src="./assets/img/Java.jpg" alt="">
                         <a href="https://github.com/princekumarg/multiple_disease_prediction"><button class="but">Code Deploy</button></a>
                         <a href="https://princekumarg-multiple-disease-prediction-app1-4366nx.streamlit.app/"><button class="but">Live Demo</button></a>
                     </div>
@@ -449,6 +448,6 @@
         <script src="https://unpkg.com/scrollreveal"></script>
 
         <!--===== MAIN JS =====-->
-        <script src="assets/js/main.js"></script>
+        <script src="./assets/js/main.js"></script>
     </body>
 </html>
