--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
                     <a href="#" class="button">Coding&competion</a>
                 </div>  
                 <div class="home__social">
-                    <a href="https://www.hackerrank.com/agarwal8789" class="home__social-icon"><i class='bx bx-code-alt'></i></a>
-                    <a href="https://www.leetcode.com/prince_agrawal2002" class="home__social-icon"><i class='bx bx-code-block'></i></a>
-                    <a href="https://www.kaggle.com/princekumarg" class="home__social-icon"><i class='bx bxs-data'></i></a>
-                    <a href="https://www.codechef.com/users/sv_20781a05g7" class="home__social-icon"><i class='bx bx-check-square'></i></a>
+                    <a href="https://www.hackerrank.com/agarwal8789" class="home__social-icon"><i style="color: purple;" class='bx bx-code-alt'></i></a>
+                    <a href="https://www.leetcode.com/prince_agrawal2002" class="home__social-icon"><i style="color: purple;" class='bx bx-code-block'></i></a>
+                    <a href="https://www.kaggle.com/princekumarg" class="home__social-icon"><i style="color: purple;" class='bx bxs-data'></i></a>
+                    <a href="https://www.codechef.com/users/sv_20781a05g7" class="home__social-icon"><i style="color: purple;" class='bx bx-check-square'></i></a>
                 </div>
                 <div class="home__data">
                     <a href="#" class="button">MyCV</a>
                 </div>
                 <div class="home__social">
-                    <a href="./assets/Mycv/Prince_kumar.pdf"><i style="font-size:30px;" class='bx bx-spreadsheet'></i></a>
+                    <a href="./assets/Mycv/Prince_kumar.pdf"><i style="font-size:30px;" style="color: purple;" class='bx bx-spreadsheet'></i></a>
                 </div>
 
                 <div class="home__img">
